--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -7,7 +7,9 @@ Django==2.2.2
 django-environ==0.4.5
 django-extensions==2.1.9
 django-merged-inlines==1.0.3
+gevent==1.4.0
 greenlet==0.4.15
+gunicorn==19.9.0
 idna==2.8
 psycopg2==2.8.2
 Pygments==2.4.2
