--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -7,6 +7,7 @@ Django==2.2.2
 django-environ==0.4.5
 django-extensions==2.1.9
 django-merged-inlines==1.0.3
+django-tools-seo==1.0.6
 gevent==1.4.0
 greenlet==0.4.15
 gunicorn==19.9.0
