--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -8,16 +8,19 @@ django-environ==0.4.5
 django-extensions==2.1.9
 django-merged-inlines==1.0.3
 django-tools-seo==1.0.6
+Faker==1.0.7
 gevent==1.4.0
 greenlet==0.4.15
 gunicorn==19.9.0
 idna==2.8
 psycopg2==2.8.2
 Pygments==2.4.2
+python-dateutil==2.8.0
 pytz==2019.1
 requests==2.22.0
 six==1.12.0
 sqlparse==0.3.0
+text-unidecode==1.2
 typing==3.6.6
 urllib3==1.25.3
 wcwidth==0.1.7
