--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,26 +1,33 @@
+asgiref==3.4.1
+backports.cached-property==1.0.1
 blessings==1.7
-bpython==0.18
-certifi==2019.9.11
-chardet==3.0.4
-curtsies==0.3.0
-Django==2.2.6
-django-environ==0.4.5
-django-extensions==2.2.3
+bpython==0.20.1
+certifi==2021.10.8
+charset-normalizer==2.0.7
+curtsies==0.3.4
+cwcwidth==0.1.5
+Django==2.2.24
+django-environ==0.8.1
+django-extensions==3.1.3
 django-merged-inlines==1.0.3
 django-tools-seo==1.0.6
-Faker==2.0.2
-gevent==1.4.0
-greenlet==0.4.15
-gunicorn==19.9.0
-idna==2.8
-psycopg2==2.8.3
-Pygments==2.4.2
-python-dateutil==2.8.0
-pytz==2019.3
-requests==2.22.0
-six==1.12.0
-sqlparse==0.3.0
+Faker==9.5.2
+gevent==20.9.0
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
+psycopg2==2.8.6
+Pygments==2.10.0
+python-dateutil==2.8.2
+pytz==2021.3
+pyxdg==0.27
+requests==2.26.0
+six==1.16.0
+sqlparse==0.4.2
 text-unidecode==1.3
-typing==3.7.4.1
-urllib3==1.25.6
-wcwidth==0.1.7
+typing==3.7.4.3
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+wcwidth==0.2.5
+zope.event==4.5.0
+zope.interface==5.4.0
