--- a/requirements/requirements-outdated.txt
+++ b/requirements/requirements-outdated.txt
@@ -1,7 +1,8 @@
-Package    Version Latest  Type
----------- ------- ------- -----
-bpython    0.20.1  0.22.1  wheel
-curtsies   0.3.4   0.3.10  sdist
-gevent     20.9.0  21.12.0 wheel
-psycopg2   2.8.6   2.9.3   sdist
-setuptools 62.3.4  62.6.0  wheel
+Package                Version Latest  Type
+---------------------- ------- ------- -----
+bpython                0.20.1  0.22.1  wheel
+charset-normalizer     2.0.12  2.1.0   wheel
+curtsies               0.3.4   0.3.10  sdist
+django-admin-sortable2 1.0.4   2.1     wheel
+gevent                 20.9.0  21.12.0 wheel
+psycopg2               2.8.6   2.9.3   sdist
