--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,11 +1,11 @@
-asgiref==3.5.2
+asgiref==3.4.1
 blessings==1.7
 bpython==0.20.1
 certifi==2022.6.15
-charset-normalizer==2.1.0
+charset-normalizer==2.0.12
 curtsies==0.3.4
-Django==4.0.5
-django-admin-sortable2==2.1
+Django==3.2.13
+django-admin-sortable2==1.0.4
 django-environ==0.9.0
 django-extensions==3.1.5
 django-tools-seo==1.0.6
@@ -17,9 +17,11 @@ idna==3.3
 psycopg2==2.8.6
 Pygments==2.12.0
 python-dateutil==2.8.2
-requests==2.28.1
+pytz==2022.1
+requests==2.27.1
 six==1.16.0
 sqlparse==0.4.2
+typing_extensions==4.1.1
 urllib3==1.26.9
 wcwidth==0.2.5
 zope.event==4.5.0
