--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,28 +1,28 @@
 asgiref==3.4.1
 blessings==1.7
 bpython==0.20.1
-certifi==2022.6.15
+certifi==2022.9.24
 charset-normalizer==2.0.12
 curtsies==0.3.4
-Django==3.2.13
+Django==3.2.16
 django-admin-sortable2==1.0.4
 django-environ==0.9.0
-django-extensions==3.1.5
+django-extensions==3.2.1
 django-tools-seo==1.0.6
-Faker==13.14.0
+Faker==14.2.1
 gevent==20.9.0
-greenlet==1.1.2
+greenlet==1.1.3.post0
 gunicorn==20.1.0
-idna==3.3
+idna==3.4
 psycopg2==2.8.6
-Pygments==2.12.0
+Pygments==2.13.0
 python-dateutil==2.8.2
-pytz==2022.1
+pytz==2022.5
 requests==2.27.1
 six==1.16.0
-sqlparse==0.4.2
+sqlparse==0.4.3
 typing_extensions==4.1.1
-urllib3==1.26.9
+urllib3==1.26.12
 wcwidth==0.2.5
 zope.event==4.5.0
-zope.interface==5.4.0
+zope.interface==5.5.0
