--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -10,12 +10,15 @@ django-environ==0.11.2
 django-extensions==3.2.3
 django-tools-seo==1.0.6
 Faker==14.2.1
-gevent==20.9.0
+gevent==22.10.2
 greenlet==2.0.2
-gunicorn==20.1.0
+gunicorn==21.2.0
 idna==3.7
+importlib-metadata==4.8.3
+packaging==21.3
 psycopg2==2.8.6
 Pygments==2.14.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.27.1
@@ -24,5 +27,6 @@ sqlparse==0.4.4
 typing_extensions==4.1.1
 urllib3==1.26.18
 wcwidth==0.2.13
+zipp==3.6.0
 zope.event==4.6
 zope.interface==5.5.2
