--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -8,7 +8,7 @@ Django==3.2.25
 django-admin-sortable2==1.0.4
 django-environ==0.11.2
 django-extensions==3.2.3
-django-tools-seo==1.0.6
+django-solo==2.0.0
 Faker==14.2.1
 gevent==22.10.2
 greenlet==2.0.2
