--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,28 +1,32 @@
 asgiref==3.4.1
 blessings==1.7
 bpython==0.20.1
-certifi==2022.9.24
+certifi==2024.6.2
 charset-normalizer==2.0.12
 curtsies==0.3.4
-Django==3.2.16
+Django==3.2.25
 django-admin-sortable2==1.0.4
-django-environ==0.9.0
-django-extensions==3.2.1
-django-tools-seo==1.0.6
+django-environ==0.11.2
+django-extensions==3.2.3
+django-solo==2.0.0
 Faker==14.2.1
-gevent==20.9.0
-greenlet==1.1.3.post0
-gunicorn==20.1.0
-idna==3.4
+gevent==22.10.2
+greenlet==2.0.2
+gunicorn==21.2.0
+idna==3.7
+importlib-metadata==4.8.3
+packaging==21.3
 psycopg2==2.8.6
-Pygments==2.13.0
-python-dateutil==2.8.2
-pytz==2022.5
+Pygments==2.14.0
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 requests==2.27.1
 six==1.16.0
-sqlparse==0.4.3
+sqlparse==0.4.4
 typing_extensions==4.1.1
-urllib3==1.26.12
-wcwidth==0.2.5
-zope.event==4.5.0
-zope.interface==5.5.0
+urllib3==1.26.18
+wcwidth==0.2.13
+zipp==3.6.0
+zope.event==4.6
+zope.interface==5.5.2
